--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-   "homepage": "https://aj061996.github.io/portfolio",
+   "homepage": "https://Ananth-Babu96.github.io/portfolio",
    "name": "portfolio-site",
    "version": "0.1.0",
    "private": true,
